main.css
@font-face {
    font-family: 'Raleway';
    font-style: normal;
    font-weight: 300;
    src: url(font/Raleway-ExtraLight.ttf);
    font-display: fallback;
}
body {
    margin: 0;
    overflow-y: hidden;
    font-family: Raleway;
}
#editor {
    width: 100%;
    height: calc(100% - 25px);
    position: absolute;
    z-index: 9;
    font-size: 16px;
}
.edit_button {
    background-color: rgb(70, 70, 70);
    border: none;
    color: rgb(255, 255, 255);
    width: 80px;
    height: 20px;
    text-decoration: none;
    display: inline-block;
    font-size: 16px;
    margin-right: -1px;
    margin-left: -1px;
    margin-top: -1px;
    margin-bottom: -1px;
    cursor: context-menu;
    text-align: center;
    border: 0px solid
}
.edit_button:hover {
    background-color: rgb(0, 0, 0);
}
.edit_button_1 {
    margin-left: 1px;
    width: 248px;
    height: 19px;
    color: rgb(201, 201, 201);
}
.edit_button_1:hover {
    background-color: rgb(0, 0, 0);
}
#edit_file_menu, #edit_edit_menu, #edit_search_menu, #edit_about_menu {
    position: absolute;
    background-color: rgb(175, 175, 175);
    text-align: left;
    width: 250px;
    padding: 2px 0px;
    margin: 0px -1px;
    border: 4px double black;
    display: none;
}
#edit_file_menu a, #edit_edit_menu a, #edit_search_menu a, #edit_about_menu a {
    color: rgb(236, 236, 236);
    display: block;
    text-align: left;
    text-decoration: none;
}
#editor_input::-webkit-scrollbar {
    display: none;
}
#editor_input {
    -ms-overflow-style: none;  /* IE and Edge */
      scrollbar-width: none;  /* Firefox */
}
#edit_file_dropdown:hover #edit_file_menu { display: block; }
#edit_edit_dropdown:hover #edit_edit_menu { display: block; }
#edit_search_dropdown:hover #edit_search_menu { display: block; }
#edit_about_dropdown:hover #edit_about_menu { display: block; }
.edit_button_1 { cursor: context-menu; }
button {
    background-color: #707070;
    border: none;
    color: white;
    padding: 2px 10px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-size: 14px;
    margin: 0px 1px;
    cursor: pointer;
}

